test/libsolidity/syntaxTests/nameAndTypeResolution/uninitialized_const_variable.sol
contract Foo {
    uint constant y;
}
// ----
// TypeError: (19-34): Uninitialized "constant" variable.
